# alira

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: aists.py  compare.py  demo.py  embeddings.py  lab_explorer.py  utils.py
examples/data/: ignobel.csv  movies.csv  papers.csv
src/alira/: __init__.py  active_learner.py  classifiers.py  config.py  evaluation.py  llms.py  synthetic.py
tests/: test_active_learner.py  test_llms.py  test_utils.py
