[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alira"
version = "0.1.0"
description = "ALIRA classifies a large text corpus according to a natural-language query when exhaustive LLM evaluation is impractical. It iteratively discovers relevant documents using active learning, LLM validation, and classifier refinement."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gaël Bernard", email = "gael.bernard@epfl.ch"},
    {name = "Aitor Pérez", email = "aitor.perez@epfl.ch"},
]
keywords = ["active-learning", "classification", "text-classification", "embeddings", "hyde", "information-retrieval", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "openai",
    "pandas",
    "pydantic",
    "scikit-learn",
]

[project.optional-dependencies]
demo = [
    "python-dotenv",
    "epfl-data-index",
    "pyarrow",
]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/epfl-p-data/alira"

[tool.hatch.build.targets.wheel]
packages = ["src/alira"]
